--- a/index.html
+++ b/index.html
@@ -20,37 +20,25 @@
 
 
     <style>
-.bubble {
-    background-color: #eee;
-    border: 2px solid #333;
-    border-radius: 5px;
-    color: #333;
-    display: inline-block;
-    font: 16px/24px sans-serif;
-    padding: 12px 24px;
-    position: relative;
-}
-.bubble:after,
-.bubble:before {
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-top: 20px solid #eee;
-    bottom: -20px;
-    content: '';
-    left: 50%;
-    margin-left: -20px;
-    position: absolute;
+.text-bubble {
+    background-color: #007BFF; /* Mavi arka plan rengi */
+    color: white; /* Metin rengi beyaz */
+    padding: 20px 20px; /* İç boşluk */
+    border-radius: 10px; /* Yuvarlatılmış köşeler */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Hafif gölge */
+    display: inline-block; /* Yatayda minimum alan kaplaması için */
+    font-family: Arial, sans-serif; /* Yazı tipi */
 }
 
-/* Styling for second triangle (border) */
+.text-bubble h2 {
+    margin: 0;
+    font-size: 18px;
+}
 
-.bubble:before {
-    border-left: 23px solid transparent;
-    border-right: 23px solid transparent;
-    border-top: 23px solid;
-    border-top-color: inherit; /* Can't be included in the shorthand to work */
-    bottom: -23px;
-    margin-left: -23px;
+.text-bubble p {
+    margin: 0;
+    font-size: 14px;
+    opacity: 0.8; /* Alt metin için hafif şeffaflık */
 }
     </style>
 </head>
@@ -59,7 +47,10 @@
     <div class="centered instructions"></div>
     <a-scene>
         <a-entity htmlembed position="0 0 -5">
-            <span class="bubble">Speech bubble with a border</span>
+            <div class="text-bubble">
+                <h2>Gaffar Okkan Cd.</h2>
+                <p>179 m uzakta</p>
+            </div>
         </a-entity>
     </a-scene>
     <div class="centered">
